Fixed some missing relationships,constructor and file name mismatch erorrs